--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "karma start",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
     "postinstall": "typings install",
-    "lite":"lite-server"
+    "lite": "lite-server"
   },
   "license": "MIT",
   "dependencies": {
@@ -20,11 +20,14 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.1",
     "core-js": "^2.4.0",
+    "primeng": "^1.0.0-beta.12",
+    "primeui": "^4.1.14",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
+    "@types/hammerjs": "^2.0.31",
     "angular2-template-loader": "^0.4.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
