--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.1",
     "core-js": "^2.4.0",
+    "ng2-bootstrap": "^1.0.24",
     "primeng": "^1.0.0-beta.12",
     "primeui": "^4.1.14",
     "reflect-metadata": "0.1.2",
